Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
    ],
    "source": [
     "for index in countries:\n",
-    "    print(countries[index])"
+    "    print(countries)"
    ]
   },
   {
