--- a/index.ipynb
+++ b/index.ipynb
@@ -562,7 +562,7 @@
    ],
    "source": [
     "for key, value in example_dictionary.items():\n",
-    "    print(\"this is the key:\", key)    \n",
+    "    print(\"this is the key:\", key.titl)    \n",
     "    print(\"this is the value:\", value, \"\\n\")"
    ]
   },
