--- a/index.ipynb
+++ b/index.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "dict_items"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,20 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is the key: first_name\n",
+      "this is the key: First_Name\n",
       "this is the value: Terrance \n",
       "\n",
-      "this is the key: last_name\n",
+      "this is the key: Last_Name\n",
       "this is the value: KOAR \n",
       "\n",
-      "this is the key: favorite_language\n",
+      "this is the key: Favorite_Language\n",
       "this is the value: Python \n",
       "\n"
      ]
@@ -562,7 +562,7 @@
    ],
    "source": [
     "for key, value in example_dictionary.items():\n",
-    "    print(\"this is the key:\", key.titl)    \n",
+    "    print(\"this is the key:\", key.title())    \n",
     "    print(\"this is the value:\", value, \"\\n\")"
    ]
   },
