--- a/index.ipynb
+++ b/index.ipynb
@@ -541,20 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is the key: First_Name\n",
+      "this is the key: first_name\n",
       "this is the value: Terrance \n",
       "\n",
-      "this is the key: Last_Name\n",
-      "this is the value: KOAR \n",
+      "this is the key: last_name\n",
+      "this is the value: Koar \n",
       "\n",
-      "this is the key: Favorite_Language\n",
+      "this is the key: favorite_language\n",
       "this is the value: Python \n",
       "\n"
      ]
@@ -563,7 +563,7 @@
    "source": [
     "for key, value in example_dictionary.items():\n",
     "    print(\"this is the key:\", key)    \n",
-    "    print(\"this is the value:\", value, \"\\n\")"
+    "    print(\"this is the value:\", value.title(), \"\\n\")"
    ]
   },
   {
