Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
       "this is the value: Terrance \n",
       "\n",
       "this is the key: last_name\n",
-      "this is the value: Koar \n",
+      "this is the value: KOAR \n",
       "\n",
       "this is the key: favorite_language\n",
       "this is the value: Python \n",
